--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lixo Eletrônico</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
 
