--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lixo Eletrônico</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="public/logo.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <div class="header-logo">
-            <img src="logo.png" alt="reciclagem">
+            <img src="public/logo.png" alt="reciclagem">
         </div>
         <div class="header-links">
             <a href="#section-1">Início</a>
             <a href="#section-2">Impacto</a>
-            <a href="#">Soluções</a>
+            <a href="#footer">Soluções</a>
         </div>
     </header>
     <section id="section-1">
@@ -40,20 +40,23 @@
         </div>
         <div class="section-2-cards">
             <div class="section-2-card">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="section-2-card-icon lucide lucide-smartphone"><rect width="14" height="20" x="5" y="2" rx="2" ry="2"/><path d="M12 18h.01"/></svg>
                 <h3>57.4Mi de Toneladas</h3>
                 <p>de lixo eletrônico gerado globalmente em 2021</p>
             </div>
             <div class="section-2-card">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="section-2-card-icon lucide lucide-battery"><rect width="16" height="10" x="2" y="7" rx="2" ry="2"/><line x1="22" x2="22" y1="11" y2="13"/></svg>
                 <h3>2%</h3>
                 <p>do lixo eletrônico é reciclado devidamente</p>
             </div>
             <div class="section-2-card">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="section-2-card-icon lucide lucide-triangle-alert"><path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"/><path d="M12 9v4"/><path d="M12 17h.01"/></svg>
                 <h3>$62.5Bi</h3>
                 <p>de materiais brutos são perdidos anualmente</p>
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="footer">
         <div class="footer-text">
             <span class="footer-badge">Soluções</span>
             <h1>Como Podemos Combater a Crise Do Lixo Eletrônico</h1>
